# jarvis-local-voice-agent

./: .env.example  .gitignore  README.md  README_WEB_UI.md  config.example.yaml  install.sh  jarvis  limpiar_backups.sh  pyproject.toml  requirements-web.txt  requirements.txt  uninstall.sh
scripts/: check_audio.sh  download_models.sh  download_voices.sh  install_deps_ubuntu.sh  jarvis_linux_actions_smoke.py  run_jarvis_web.py
src/jarvis/: cli.py  cli.py.fix_brain_test_position  config.py  daemon.py  daemon.py.bak_always_listen  logger.py  main.py  state.py
src/jarvis/actions/: __init__.py  catalog.py  risk.py  specs.py
src/jarvis/audio/: conversation_state.py  device_selector.py  echo_guard.py  followup_hint.py  kokoro_bridge.py  kokoro_cli.py  kokoro_hot_client.py  kokoro_hot_server.py  microphone.py  post_question_listen.py  recorder.py  speaker.py  vad.py  wakeword.py  wakeword.py.bad_openwakeword_backup  wakeword.py.bak2  wakeword.py.broken_20260421_123340  wakeword.py.whisper_backup  wav_pad.py
src/jarvis/brain/: action_schema.py  action_validator.py  artifact_search.py  context_store.py  discovery_agent.py  event_journal.py  executor.py  explainer.py  fast_replies.py  folder_index.py  intent_classifier.py  intent_classifier.py.backup_music_classifier  intent_classifier.py.bak_direct_actions  intent_classifier.py.broken_music_backup  intent_model.py  memory.py  (+8 more)
src/jarvis_local_voice_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
systemd/: jarvis.service
tests/: test_intents.py  test_router.py  test_skills.py  test_tts_fallback.py
(+48 files in other folders)
